fix: event image on mobile

--- a/Home/src/components/CSS/Events.module.css
+++ b/Home/src/components/CSS/Events.module.css
@@ -183,6 +183,10 @@
     display: none;
   }
 
+  .carousel{
+    padding: 0 0.2rem;
+  }
+
   .info {
     display: none;
     width: 100%;
